// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hoist should hoist field and filter args with global flag 1`] = `
"type Query {
  users: [User!]!
}

type UserSearchResult {
  page: Int!
}

type User {
  id: ID!
  name: String!
}
"
`;

exports[`hoist should hoist field and filter individual args via pathConfig 1`] = `
"type Query {
  users(page: Int): [User!]!
}

type UserSearchResult {
  page: Int!
}

type User {
  id: ID!
  name: String!
}
"
`;

exports[`hoist should hoist field and filter individual args via pathConfig independent of global flag 1`] = `
"type Query {
  users(page: Int): [User!]!
}

type UserSearchResult {
  page: Int!
}

type User {
  id: ID!
  name: String!
}
"
`;

exports[`hoist should hoist field with mixed pathConfig array 1`] = `
"type Query {
  users(limit: Int!, page: Int): [User!]!
}

type UserSearchResult {
  page: Int!
}

type User {
  id: ID!
  name: String!
}
"
`;

exports[`hoist should hoist field with string pathConfig array 1`] = `
"type Query {
  users(limit: Int!, page: Int): [User!]!
}

type UserSearchResult {
  page: Int!
}

type User {
  id: ID!
  name: String!
}
"
`;
